# StarletSerializer

./: CMakeLists.txt  README.md
inc/StarletParser/: parser.hpp
inc/StarletParsers/: parser.hpp  parserUtils.hpp
inc/StarletParsers/common/: fileParser.hpp  parseUtils.hpp  parserUtils.hpp
inc/StarletParsers/meshes/: mesh.hpp  plyParser.hpp
inc/StarletParsers/scene/: camera.hpp  cameraParser.hpp  colour.hpp  grid.hpp  gridParser.hpp  light.hpp  lightParser.hpp  model.hpp  modelParser.hpp  primitive.hpp  primitiveParser.hpp  textureConnection.hpp  textureData.hpp  textureParser.hpp
inc/StarletParsers/textures/: bmpParser.hpp  texture.hpp
inc/StarletParsers/utils/: log.hpp
src/: bmpParser.cpp  cameraParser.cpp  colourParser.cpp  fileParser.cpp  gridParser.cpp  lightParser.cpp  modelParser.cpp  parser.cpp  parserUtils.cpp  plyParser.cpp  primitiveParser.cpp  sceneParser.cpp  textureParser.cpp  velocityParser.cpp
src/common/: fileParser.cpp  parserFunctions.cpp  parserUtils.cpp
src/meshes/: plyParser.cpp
src/parser/: bmpParser.cpp  cameraParser.cpp  colourParser.cpp  fileParser.cpp  gridParser.cpp  lightParser.cpp  modelParser.cpp  parser.cpp  plyParser.cpp  primitiveParser.cpp  sceneParser.cpp  textureParser.cpp  velocityParser.cpp
src/scene/: cameraParser.cpp  gridParser.cpp  lightParser.cpp  modelParser.cpp  primitiveParser.cpp  textureParser.cpp
src/textures/: bmpParser.cpp  textures.cpp
src/utils/: log.cpp
src/writer/: sceneWriter.cpp
