cmake_minimum_required(VERSION 3.20)

set(PARSER_NAME StarletParsers)
set(PARSER_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
set(PARSER_INC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/inc")

if(NOT TARGET ${PARSER_NAME})
  add_library(${PARSER_NAME} STATIC)

  file(GLOB_RECURSE PARSER_SRC CONFIGURE_DEPENDS ${PARSER_SRC_DIR}/*.cpp)
  file(GLOB_RECURSE PARSER_HEADERS CONFIGURE_DEPENDS ${PARSER_INC_DIR}/StarletParsers/*.hpp)

  source_group(TREE ${PARSER_SRC_DIR} PREFIX "Source Files" FILES ${PARSER_SRC})
  source_group(TREE ${PARSER_INC_DIR} PREFIX "Header Files" FILES ${PARSER_HEADERS})

  target_sources(${PARSER_NAME} PUBLIC ${PARSER_HEADERS} PRIVATE ${PARSER_SRC})
  target_include_directories(${PARSER_NAME} PUBLIC $<BUILD_INTERFACE:${PARSER_INC_DIR}> $<INSTALL_INTERFACE:include>)
  target_link_libraries(${PARSER_NAME} PUBLIC StarletMath)
endif()
